<resources>
    <string name="app_name">appListaCurso</string>
    <string name="txt_title">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_first_name">Primeiro Nome:</string>
    <string name="txt_hint_edit_surname">Sobrenome</string>
    <string name="txt_hint_edit_course">Curso</string>
    <string name="txt_hint_edit_tell">Telefone</string>
    <string name="txt_button_clean">LIMPAR</string>
    <string name="txt_button_save">SALVAR</string>
    <string name="txt_button_finish">FINALIZAR</string>
    <string name="txtSelectCourse">Selecione o curso:</string>
</resources>