<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_first_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/text_colorBlack"
                tools:ignore="VisualLintTextFieldSize"
                tools:layout_editor_absoluteX="17dp" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_surname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/text_colorBlack"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editCourse"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_course"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/text_colorBlack"
                tools:ignore="VisualLintTextFieldSize"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTell"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_tell"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/text_colorBlack"
                tools:ignore="VisualLintTextFieldSize"
                tools:layout_editor_absoluteX="17dp" />

            <TextView
                android:id="@+id/txtListSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/txtSelectCourse"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:minHeight="48dp"
                tools:ignore="VisualLintBounds" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/corButton"
                    android:text="@string/txt_button_clean" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/corButton"
                    android:text="@string/txt_button_save" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/corButton"
                android:text="@string/txt_button_finish"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>